# FinTech_Experiment

./: .gitignore  README.md  bash_explanation.md  git_explanation.md  main.py  planner.txt  pyproject.toml
.ipynb_checkpoints/: planner-checkpoint.txt
Help/: AI_explanation.md  bash_explanation.md  finance_python_explanation.md  git_explanation.md
Notebooks/.ipynb_checkpoints/: first-checkpoint.ipynb
notebooks/: first.ipynb
notebooks/.ipynb_checkpoints/: first-checkpoint.ipynb
